--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 			body { 
 				font-family: arial;
 				text-align: center;
-				background-color: #e3edff;
+				background-image: linear-gradient(to top, #2500ff, #7557ff, #a791ff, #d3c8ff, #ffffff);
 			}
 
 			a {
@@ -13,23 +13,25 @@
 			}
 
 			.teacherCard {
-				background-color: lightblue;
+				background-color: #FFFFFF;
 				text-align: center;
 				font-family: arial;
-				padding: 2px;
+				padding: 1px;
 				width: 20%;
 				border-radius: 5px;
 				display: block;
 				margin-left: auto;
 				margin-right: auto;
-				margin-top: 5px;
-				margin-bottom: 5px;
+				margin-top: 6px;
+				margin-bottom: 6px;
+				box-shadow: 2px 5px 5px #4a4a4a;
 			}
 
 		</style>
 	</head>
 	<body>
 		<h1>TEACHER TRIBUTES</h1>
+		<div>
 		<div class="teacherCard">
 			<h2>ANDREADIS</h2>
 			<p><a href="https://codepen.io/ibarra-frida/pen/BaJrjNv ">Frida Ibarra</a></p>
@@ -115,7 +117,7 @@
 			<p><a href=" https://codepen.io/Amy_b91/pen/qBpxNoR ">Amy Benavidez</a></p>
 			<p><a href="https://codepen.io/Alopezbarrios/pen/BaJwbGa ">AB Lopez</a></p>
 			<p><a href="https://codepen.io/noelia_24/pen/gOoeaVK ">Noelia Olmedo</a></p>
-			<p><a href="https://codepen.io/AlexAY3RT/pen/BaJrKxQ ">ALexander Alvarez</a></p>
+			<p><a href="https://codepen.io/AlexAY3RT/pen/BaJrKxQ ">Alexander Alvarez</a></p>
 			<p><a href="https://codepen.io/kimkvries/pen/MWrVeNW ">Kimberly Alvarez</a></p>
 			<p><a href="https://codepen.io/alexandradt/pen/OJzxGGm ">Alexandra Dorante</a></p>
 			<p><a href="https://codepen.io/lovemaki/pen/wvpmGmg ">Ariel Gonzalez</a></p>
@@ -157,6 +159,7 @@
 			<p><a href="https://codepen.io/realhastalamuerte/pen/zYpWBqV ">Ximena</a></p>
 			<p><a href="https://codepen.io/Chunky2130/pen/ExoEgxg ">Luis</a></p>
 		</div>
+	</div>
 
 		
 		
